Refactor the way to run Standalone test
- Created AutoSuiteRunner for picking test classes automatically
- Create StandaloneTestSuite to start standalone instance and uses AutoSuiteRunner to run all tests
- Added the standalone-test profile to only trigger standalone tests if it is enabled